--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -2,22 +2,22 @@
     "title": "Dashboard",
     "usersPanel": {
         "title": "Users",
-        "loggedUsers": "At least once",
-        "monthlyUsers": "During last month",
-        "weeklyUsers": "Duringlast week",
+        "loggedUsers": "Connected at least once",
+        "monthlyUsers": "Connected during the last month",
+        "weeklyUsers": "Connected during the last week",
         "pendingInvitationUsers": "Pending invitations",
         "administrateButton": "Administrate users",
         "usersPerRole": "Distribution of users",
-        "connectedUsers": "Connected users",
+        "connectedUsers": "Users activity",
         "otherStatistics": "Other statistics",
         "expand": "See an overview of the administrators"
     },
     "roomsPanel": {
-        "title": "Rooms",
-        "nonDirectRoomsCount": "Multiple active rooms",
-        "directRoomsCount": "Private active rooms",
-        "administrateButton": "Administrate rooms",
-        "noRoomsMessage": "<strong>This Watcha instance does not have any rooms yet.<br/>You can create one in the \"Rooms\" tab.</strong>"
+        "title": "Conversations",
+        "regularRoomCount": "Number of rooms",
+        "activeRegularRoomCount": "Number of active rooms",
+        "administrateButton": "Administrate conversations",
+        "noRoomsMessage": "<strong>This Watcha installation does not have any conversations yet.<br/>You can create one in the \"Conversations\" tab.</strong>"
     },
     "applicationPanel": {
         "title": "Application",
