--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,7 +1,7 @@
 {
     "Upgrade to internal user": "Promouvoir en utilisateur interne",
     "Reset Password": " Réinitialiser le mot de passe",
-    "Delete Account": "supprimer le compte",
+    "Delete Account": "Supprimer le compte",
     "Show connection history": "voir l'historique de connexion",
     "Device": "Appareil",
     "Connected": "Connecté",
