fix: replace logged users with total number of users

--- a/public/locales/en/dashboardTab.json
+++ b/public/locales/en/dashboardTab.json
@@ -2,7 +2,7 @@
     "title": "Dashboard",
     "usersPanel": {
         "title": "Users",
-        "loggedUsers": "Connected at least once",
+        "loggedUsers": "Number of users",
         "monthlyUsers": "Connected during the last month",
         "weeklyUsers": "Connected during the last week",
         "administrateButton": "Administrate users",
