--- a/public/locales/fr/dashboardTab.json
+++ b/public/locales/fr/dashboardTab.json
@@ -15,7 +15,7 @@
         "title": "Conversations",
         "regularRoomCount": "Nombre total de salons",
         "activeRegularRoomCount": "Nombre total de salons actifs",
-        "noRoomsMessage": "<strong>Cette installation de Watcha ne compte aucunes conversations.<br/>Vous pouvez en créer un dans l'onglet \"Conversations\".</strong>"
+        "noRoomsMessage": "<strong>Cette installation de Watcha ne compte aucunes conversations.</strong>"
     },
     "applicationPanel": {
         "title": "Application",
